--- a/wp-content/themes/treefix/style.css
+++ b/wp-content/themes/treefix/style.css
@@ -5,37 +5,62 @@ Author: Rodrigo Pardo
 Description: This is the Treefix theme.
 Version: 1.0
 License: GNU General Public License v2 or later
-Text Domain: Treefix Landing
+Text Domain: TreefixLanding
 
 */
 
 
 
 @import url('https://fonts.googleapis.com/css?family=Rubik:300,400,500,700');
-
-/*
-
-font-family: 'Rubik', sans-serif;
-
-*/
+body, html {
+	width:100%;
+	max-width:100%;
+	height:100%;
+	margin:0;
+	padding:0;
+}
 body {
-	background: -moz-linear-gradient(-45deg, #53b576 0%, #28a8e0 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(-45deg, #53b576 0%,#28a8e0 100%); /* Chrome10-25,Safari5.1-6 */
+	background: -moz-linear-gradient(135deg, #53b576 0%, #28a8e0 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(135deg, #53b576 0%,#28a8e0 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(135deg, #53b576 0%,#28a8e0 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#53b576', endColorstr='#28a8e0',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+	background-size:cover;
+	background-repeat: no-repeat;
+	position:fixed;
 }
 .logoContainer {
 	display: block;
-	max-width:480px;
+	max-width:260px;
 	width:100%;
 	height:auto;
-	margin:0 auto;
+	margin:50% auto 0;
+}
+.logoContainer img {
+	background-size:cover;
+	width:100%;
+	max-width: 100%;
+	height:auto;
 }
 .comingSoonText {
-	font-size:1.6em;
+	margin-top:40px;
+	font-size:1.5em;
 	font-weight:700;
 	letter-spacing: 1px;
 	display:block;
 	text-align:center;
 	width:100%;
+	color:#ffffff;
+	font-family: 'Rubik', sans-serif;
 }
+#content {
+	padding:0px 20px;
+}
+
+@media screen and (min-width: 720px) {
+	.comingSoonText {
+		font-size:2.2em;
+	}
+	.logoContainer {
+		max-width:480px;
+		margin-top:10%;
+	}
+	}
